--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 						<input 
 							class="edit" 
 							v-model="item.content"
-							@keyup.enter="updataTodo(index)"
+							@keyup.enter="updateTodo(index)"
 							@keyup.esc="backTodo(index)">
 					</li>
 				</ul>
